# nxzip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_.md  config.h  config.h.in  main.cpp  nxzip.h  nxzutil.h
bwt/: bwt.cpp  bwt.h  bwt2.cpp  pbwt.h
crc32/: CMakeLists.txt  crc32.cpp  crc32.h
docs/: BWT and IBWT.md  bwt.md  huffman.md  iofile.md  rlc.md  unit.md
emake/: debug.mak
file/: filedef.h  iofile.cpp  iofile.h
huffman/: huffman.cpp  huffman.h  zlibh.c
huffman/legacy/: huffman_s.cpp  huffman_s.h
logger/: log.h  unistd.h
movetofront/: mtf.cpp  mtf.h
rlc/: rlc.cpp  rlc.h
rlc/legacy/: rlc.cpp  rlc.h
test/: bwt_stream.cpp  bwt_stream.mak  file.h  huff_stream.cpp  huff_stream.mak  mtf_stream.cpp  mtf_stream.mak  ntest.cpp  ntest.h  rlc_stream.cpp  rlc_stream.mak  unistd.h  unit_test.ps1
